Fix code block overflow

--- a/plugins/base/src/main/resources/dokka/styles/style.css
+++ b/plugins/base/src/main/resources/dokka/styles/style.css
@@ -1028,3 +1028,7 @@ td.content {
     float: right;
     margin-left: auto
 }
+
+div.runnablesample {
+    height: fit-content;
+}
